# librus-python

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: bump-version.yml  ci.yml  docker-build.yml  poetry-version-bump.yml  release.yml
librus_python/: api.py  config.py
librus_python/resources/: absence.py  grade.py  inbox.py
tests/: test_absence.py  test_api.py  test_grade.py  test_inbox.py
