[tool.poetry]
name = "librus-python"
version = "0.1.0"
description = ""
authors = ["Marcin Pyrka <pyrka.marcin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
