[tool.poetry]
name = "librus-python"
version = "0.1.1"
description = ""
authors = ["Marcin Pyrka <pyrka.marcin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"
beautifulsoup4 = "^4.12.3"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
